--- a/client/myapp/package.json
+++ b/client/myapp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "antd": "^5.17.4",
+    "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
