--- a/client/myapp/package.json
+++ b/client/myapp/package.json
@@ -14,13 +14,12 @@
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "firebase": "^10.12.2",
-    "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "sass": "^1.77.4",
-    "swiper": "^11.1.4",
-    "yup": "^1.4.0"
+    "sweetalert": "^2.1.2",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
